--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -72,7 +72,7 @@ $hero-min-height-md: 600px;
 $hero-max-height-md: 600px;
 
 $hero-container-v-padding: 60px;
-$hero-container-h-padding-sm: 80px;
+$hero-container-h-padding-sm: 150px;
 
 
 // #############################################################################
